fix photo distortion, correct age calculation, remove blue highlighting from buttons

--- a/app/assets/stylesheets/components/_user-images.scss
+++ b/app/assets/stylesheets/components/_user-images.scss
@@ -1,5 +1,6 @@
 .avatar {
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .avatar-large {
@@ -20,6 +21,7 @@
 }
 
 .modal-image {
+  object-fit: cover;
   width: 300px;
   height: 300px;
   border-radius: 2px;
